fixed error when logging out

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/app.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/app.component.html
@@ -15,7 +15,7 @@
         <div class="dropdown-content">
           <a routerLink="/profile">Profile</a>
           <a routerLink="/dashboard" *ngIf="loggedIn && user?.isAdmin">Dashboard</a>
-          <a routerLink="" (click)="logoutUser()">Logout</a>
+          <a routerLink="/home" (click)="logoutUser()">Logout</a>
         </div>
       </div>
     </span>
