Slogan change on website

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/home/home.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/home/home.component.html
@@ -1,7 +1,8 @@
 <div class="background">
     <div class="container" color="accent">
         <h1>
-            Welcome to ESE Website
+            Welcome to the Bern Fanpage
+          <h3>Share your {{current}}</h3>
         </h1>
         <span>
             <a routerLink="/postfeed"><button mat-raised-button color="primary">Posts</button></a>
