added more slogans

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/home/home.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/home/home.component.html
@@ -5,8 +5,10 @@
           <h3>Share your {{current}}</h3>
         </h1>
         <span>
-            <a routerLink="/postfeed"><button mat-raised-button color="primary">Posts</button></a>
-            <a routerLink="/fan-shop"><button mat-raised-button color="primary">Fan-Shop</button></a>
+            <a routerLink="/postfeed"><button mat-raised-button color="primary">Browse Posts</button></a>
+            <a routerLink="/fan-shop"><button mat-raised-button color="primary">Shop Fan Articles</button></a>
         </span>
     </div>
+
+  // Link zu Register: "Join the Bärn-Fan-Community"
 </div>
