Made method to change slogans easier

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/home/home.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="container" color="accent">
         <h1>
             Welcome to the Bern Fanpage
-          <h3>Share your {{current}}</h3>
+          <h3>Share your <span>{{current}}</span></h3>
         </h1>
         <span>
             <a routerLink="/postfeed"><button mat-raised-button color="primary">Posts</button></a>
