--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.css
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.css
@@ -1,4 +1,63 @@
 mat-grid-tile {
-    background: lightblue;
+    background: rgb(146, 146, 146);
+    border-radius: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
-  
+
+mat-grid-list {
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+mat-form-field {
+    width: 70%;
+    border-radius: 10px;
+}
+
+.feed {
+    position: relative;
+    border: solid black 3px;
+    display: flex;
+    flex-direction: column;
+
+
+    width: 70vw;
+    height: 100%;
+    
+
+
+    overflow-y: scroll;
+    -ms-overflow-style: none; /* for Internet Explorer, Edge */
+    scrollbar-width: none; /* for Firefox */
+    overflow-y: scroll;
+}
+
+.feed::-webkit-scrollbar { /* for Chrome, Safari, Opera*/
+    display: none;
+}
+
+.background {
+    position: relative;
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+
+
+}
+
+.background::before {    
+    content: "";
+    background-image: url("../../assets/images/kornhausbruecke.jpg");
+    background-size: cover;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    filter: brightness(50%);
+}
