--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.css
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.css
@@ -1,41 +1,63 @@
 mat-grid-tile {
     background: rgb(146, 146, 146);
     border-radius: 10px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    
 }
 
 mat-grid-list {
-    width: 100%;
-    margin-bottom: 10px;
+    margin-top: 20px;
+    width: 70%;
+    margin-bottom: 20px;
+
 }
 
-mat-form-field {
+mat-form-field#createPost{
     width: 70%;
     border-radius: 10px;
 }
 
+mat-form-field#selectCategory{
+    width: 20%;
+    margin-left: 10px;
+}
+
+
+mat-button-toggle-group {
+    box-shadow: none;
+    border: none;
+  }
+
+.mat-button-toggle {
+    border-radius: 20px;
+    /* margin: 5px; */
+    display: flex;
+    align-items: center;
+    background-color: rgb(146, 146, 146);
+    color: black;
+}
+
+mat-button-toggle:hover {
+    background-color: grey;    
+}
+
+.mat-button-toggle-checked {
+    background-color: grey;
+}
+
 .feed {
     position: relative;
-    border: solid black 3px;
     display: flex;
     flex-direction: column;
+    align-items: center;
 
-
-    width: 70vw;
+    width: 100%;
     height: 100%;
-    
 
-
-    overflow-y: scroll;
-    -ms-overflow-style: none; /* for Internet Explorer, Edge */
-    scrollbar-width: none; /* for Firefox */
     overflow-y: scroll;
 }
 
-.feed::-webkit-scrollbar { /* for Chrome, Safari, Opera*/
-    display: none;
-}
+
+
 
 .background {
     position: relative;
@@ -46,18 +68,30 @@ mat-form-field {
     align-items: center;
     justify-content: center;
 
-
-
 }
+
 
 .background::before {    
     content: "";
     background-image: url("../../assets/images/kornhausbruecke.jpg");
     background-size: cover;
     position: absolute;
+    background-attachment: fixed;
     top: 0px;
     right: 0px;
     bottom: 0px;
     left: 0px;
     filter: brightness(50%);
+}
+
+#post {
+    height: 100%;
+    width: 100%;
+    border-radius: 10px;
+}
+
+#post:hover {
+    -webkit-box-shadow:inset 0px 0px 0px 3px lightgrey;
+    -moz-box-shadow:inset 0px 0px 0px 3px lightgrey;
+    box-shadow:inset 0px 0px 0px 3px lightgrey;
 }
