--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post/post.component.css
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post/post.component.css
@@ -1,3 +1,109 @@
 .file-input {
     display: none;
 }
+
+
+
+
+#preview {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    /* border: solid 2px red; */
+    flex-direction: row;
+    position: relative
+}
+
+#score {
+    height: 100%;
+    width: 10%;
+    /* border: solid 2px blue; */
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    font-size: 20px;
+    margin-top: 5px;
+}
+
+#content {
+    padding: 5px;
+    display: flex;
+    height: 100%;
+    width: 80%;
+    /* border: solid 2px yellow; */
+    background-color: rgb(155, 155, 155);
+    flex-direction: column;
+}
+
+#postInfo {
+    width: 100%;
+    /* border: solid 1px pink; */
+    font-size: small;
+    
+}
+
+.link-spanner{
+    position:absolute; 
+    width:100%;
+    height:100%;
+    top:0;
+    left: 0;
+    z-index: 1;
+}
+
+#title h3{
+    font-weight: bold;
+    word-wrap: break-word;
+    font-size: 20px;
+}
+
+#description {
+    overflow: hidden;
+    max-height: 200px;
+    text-overflow: ellipsis;
+    content: "";
+    position: relative;
+    /* border: solid 1px orange; */
+}
+
+#description::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background: linear-gradient(transparent 100px, rgb(155, 155, 155));
+}
+
+#suffix {
+    /* border: solid 1px green; */
+    margin-bottom: 10px;
+    /* align-self: flex-start; */
+    /* justify-self: flex-end; */
+    margin-top: auto;
+}
+
+#suffix button:hover {
+    background-color: transparent;
+    /* position: relative; */
+    z-index: 0;
+}
+
+button {
+    position: relative;
+    z-index: 2;
+}
+
+button:hover {
+    background-color: grey;
+}
+
+.mat-upvoted {
+    color: red
+}
+
+.mat-downvoted {
+    color: blue
+}
