--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/profile/profile.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/profile/profile.component.html
@@ -2,12 +2,12 @@
   <h1>{{changedUser.username}}</h1>
   <mat-form-field>
     <input matInput type="text" placeholder="User Name" name="name" [(ngModel)]="changedUser.username" (ngModelChange)="updateUsernameMessage()">
-    <div><br>{{usernameMessage}}</div>
+    <mat-hint style="color: red" *ngIf="usernameMessage!=''">{{usernameMessage}}</mat-hint>
   </mat-form-field>
 
   <mat-form-field>
     <input matInput type="email" placeholder="E-Mail" name="email" [(ngModel)]="userEmail" (ngModelChange)="updateEmailMessage()">
-    <div><br>{{emailMessage}}</div>
+    <mat-hint style="color: red" *ngIf="emailMessage!=''">{{emailMessage}}</mat-hint>
   </mat-form-field>
 
   <br>
@@ -27,13 +27,15 @@
   </mat-form-field>
 
   <mat-form-field>
-    <input matInput type="text" placeholder="house number" name="house number" [(ngModel)]="houseNr">
+    <input matInput type="text" placeholder="house number" name="house number" [(ngModel)]="houseNr" (ngModelChange)="updateHouseNrMessage()">
+    <mat-hint style="color: red" *ngIf="houseNrMessage!=''">{{houseNrMessage}}</mat-hint>
   </mat-form-field>
 
   <br>
 
   <mat-form-field>
-    <input matInput type="text" placeholder="zip code" name="zip code" [(ngModel)]="zipCode">
+    <input matInput type="text" placeholder="zip code" name="zip code" [(ngModel)]="zipCode" (ngModelChange)="updateZipCodeMessage()">
+    <mat-hint style="color: red" *ngIf="zipCodeMessage!=''">{{zipCodeMessage}}</mat-hint>
   </mat-form-field>
 
   <mat-form-field>
@@ -47,7 +49,8 @@
   </mat-form-field>
 
   <mat-form-field>
-    <input matInput type="text" placeholder="phone number" name="phone number" [(ngModel)]="phoneNr">
+    <input matInput type="text" placeholder="phone number" name="phone number" [(ngModel)]="phoneNr" (ngModelChange)="updatePhoneNrMessage()">
+    <mat-hint style="color: red" *ngIf="phoneNrMessage!=''">{{phoneNrMessage}}</mat-hint>
   </mat-form-field>
 
   <br>
